test_programs/compile_failure/integer_literal_overflow/src/main.nr
fn main() {
    foo(1234)
}

fn foo(_x: u8) {}
